# papabench-0.4

./: .gitignore  CMakeLists.txt  Makefile  README  create_libtest.sh  exec.sh
sw/airborne/autopilot/: CMakeLists.txt  Makefile  autopilot  gps_ubx.c  link_fbw.c  main.c  mainloop.c  modem.c
sw/airborne/fly_by_wire/: CMakeLists.txt  Makefile  adc_fbw.c  adc_fbw.h  fly_by_wire  main.c  spi.h
sw/edifym/: CMakeLists.txt  libtest.c
sw/var/include/: flight_plan.h
